Add Font Awesome icons and initial CSS styles for the portfolio website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/b31ba985c9.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style/style.css" />
     <title>Benexl</title>
   </head>
   <body>
@@ -91,19 +96,19 @@
       <div class="logo">Benexl</div>
       <ul>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""><i class="fa-brands fa-whatsapp"></i></a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""><i class="fa-brands fa-discord"></i></a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
         </li>
         <li>
-          <a href=""><img src="" alt="" /></a>
+          <a href=""><i class="fa-brands fa-reddit"></i></a>
         </li>
       </ul>
     </footer>
