feat: a ton of improvements

--- a/index.html
+++ b/index.html
@@ -11,34 +11,32 @@
     <title>Benexl</title>
   </head>
   <body>
-    <section>
-      <header>
-        <nav>
-          <div class="logo">Benexl</div>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><button>Contact Me</button></li>
-          </ul>
-        </nav>
-      </header>
-      <div class="hero">
-        <div class="punch-line">
-          <h1>Hi</h1>
-          <p>I am a programmer / designer</p>
-          <p>Bringing Ideas To Life</p>
-          <button>Lets Talk about Yours Today</button>
-        </div>
-        <div class="cool-image">
-          <img
-            src="assets/images/Coding Work From Home GIF by Domme Space.gif"
-            alt="Hero Image"
-          />
-        </div>
+    <header>
+      <nav>
+        <div class="logo">Benexl</div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><button>Contact Me</button></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="hero">
+      <div class="punch-line">
+        <h1>Hi 👋</h1>
+        <p>I am a programmer / designer</p>
+        <p>Bringing Ideas To Life</p>
+        <button>Lets Talk about Yours Today</button>
       </div>
-    </section>
+      <div class="cool-image">
+        <img
+          src="assets/images/Coding Work From Home GIF by Domme Space.gif"
+          alt="Hero Image"
+        />
+      </div>
+    </div>
     <section>
       <div class="mini-section">
         <p class="mini-section-header">About</p>
@@ -112,5 +110,6 @@
         </li>
       </ul>
     </footer>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
