--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       <nav>
         <div class="logo">Benexl</div>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#designs">Designs</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a hzref="/blogs/index.html">Blog</a></li>
           <li><button>Contact Me</button></li>
         </ul>
       </nav>
@@ -38,7 +40,7 @@
       </div>
     </div>
     <section>
-      <div class="mini-section">
+      <div class="mini-section" id="about">
         <p class="mini-section-header">About</p>
         <div class="mini-section-content">
           <div class="character card">
@@ -60,20 +62,55 @@
               </div>
             </div>
           </div>
+          <div class="quote">
+            Whatever the mind can conceive and believe it can achieve <br />-
+            Napoleon
+          </div>
         </div>
       </div>
-      <div class="mini-section">
+      <div class="mini-section" id="skills">
         <p class="mini-section-header">Skills</p>
         <div class="mini-section-content">
           <div class="skill card">
-            <h2>Programming</h2>
-            <p>Python, JavaScript, PHP, Java, C++, C#, Ruby, Dart</p>
+            <i class="fab fa-python"></i>
+            <p>Programming languages</p>
+            <p>python, c, c++, go, JavaScript, html/css</p>
+          </div>
+          <div class="skill card">
+            <i class="fab fa-figma"></i>
+            <p>Figma</p>
+            <p>UI/UX Design</p>
+          </div>
+          <div class="skill card">
+            <i class="fas fa-mobile-alt"></i>
+            <p>App Development</p>
+            <p>Flutter, React Native</p>
+          </div>
+          <div class="skill card">
+            <i class="fas fa-code"></i>
+            <p>Web Development</p>
+            <p>HTML, CSS, JavaScript, React</p>
+          </div>
+          <div class="skill card">
+            <i class="fas fa-server"></i>
+            <p>API Development</p>
+            <p>Node.js, Express, Django</p>
+          </div>
+          <div class="skill card">
+            <i class="fas fa-paint-brush"></i>
+            <p>Graphic Design</p>
+            <p>Photoshop, Illustrator</p>
+          </div>
+          <div class="skill card">
+            <i class="fas fa-pencil-alt"></i>
+            <p>Logo Design</p>
+            <p>Branding, Identity</p>
           </div>
         </div>
       </div>
     </section>
     <section>
-      <div class="mini-section">
+      <div class="mini-section" id="designs">
         <p class="mini-section-header">Designs</p>
         <div class="mini-section-content">
           <div class="design card"></div>
@@ -81,7 +118,7 @@
           <div class="design card"></div>
         </div>
       </div>
-      <div class="mini-section">
+      <div class="mini-section" id="projects">
         <p class="mini-section-header">Open Source Projects</p>
         <div class="mini-section-content">
           <div class="github card"></div>
