--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p class="mini-section-header">Skills</p>
         <div class="mini-section-content">
           <div class="skill card">
-            <i class="fab fa-python"></i>
+            <i class="fas fa-laptop-code"></i>
             <p>Programming languages</p>
             <p>python, c, c++, go, JavaScript, html/css</p>
           </div>
