feat: enhance designs section with images and improve footer styles

--- a/index.html
+++ b/index.html
@@ -113,9 +113,21 @@
       <div class="mini-section" id="designs">
         <p class="mini-section-header">Designs</p>
         <div class="mini-section-content">
-          <div class="design card"></div>
-          <div class="design card"></div>
-          <div class="design card"></div>
+          <div class="design card">
+            <img src="./assets/images/graphix/Home.png" alt="" />
+          </div>
+          <div class="design card">
+            <img src="./assets/images/Desktop.png" alt="" />
+          </div>
+          <div class="design card">
+            <img src="./assets/images/Home Page.png" alt="" />
+          </div>
+          <div class="design card">
+            <img src="./assets/images/volta.png" alt="" />
+          </div>
+          <div class="design card">
+            <img src="./assets/images/portfolio.png" alt="" />
+          </div>
         </div>
       </div>
       <div class="mini-section" id="projects">
