feat: add hamburger menu and enhance GitHub project cards with images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <header>
       <nav>
         <div class="logo">Benexl</div>
+        <div class="hamburger-menu">
+          <i class="fas fa-bars"></i>
+        </div>
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -133,9 +136,27 @@
       <div class="mini-section" id="projects">
         <p class="mini-section-header">Open Source Projects</p>
         <div class="mini-section-content">
-          <div class="github card"></div>
-          <div class="github card"></div>
-          <div class="github card"></div>
+          <div class="github-card">
+            <a href="https://github.com/benexl/yt-x"
+              ><img
+                src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/yt-x"
+                alt=""
+            /></a>
+          </div>
+          <div class="github-card">
+            <a href="https://github.com/benexl/lib-x"
+              ><img
+                src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/lib-x"
+                alt=""
+            /></a>
+          </div>
+          <div class="github-card">
+            <a href="https://github.com/benexl/fastanime"
+              ><img
+                src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/FastAnime"
+                alt=""
+            /></a>
+          </div>
         </div>
       </div>
     </section>
@@ -143,10 +164,14 @@
       <div class="logo">Benexl</div>
       <ul>
         <li>
-          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://instagram.com/benex254"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </li>
         <li>
-          <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="https://wa.me/0701468604" target="_blank"
+            ><i class="fa-brands fa-whatsapp"></i
+          ></a>
         </li>
         <li>
           <a href=""><i class="fa-brands fa-discord"></i></a>
