feat: add GitHub link to footer

--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
       <div class="logo">Benexl</div>
       <ul>
         <li>
+          <a href="https://github.com/benexl"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </li>
+        <li>
           <a href="https://instagram.com/benex254"
             ><i class="fa-brands fa-instagram"></i
           ></a>
