--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/b31ba985c9.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./libs/jquery.js"></script>
     <link rel="stylesheet" href="style/style.css" />
     <title>Benexl</title>
   </head>
@@ -189,6 +190,11 @@
         </li>
       </ul>
     </footer>
-    <script src="scripts/script.js"></script>
+
+    <div id="image-viewer">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="full-image" />
+    </div>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
