feat: restructure design images and update image viewer functionality

--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
         <button>Lets Talk about Yours Today</button>
       </div>
       <div class="cool-image">
-        <img
-          src="assets/images/Coding Work From Home GIF by Domme Space.gif"
-          alt="Hero Image"
-        />
+        <img src="assets/images/coding.gif" alt="Hero Image" />
       </div>
     </div>
     <section>
@@ -118,19 +115,39 @@
         <p class="mini-section-header">Designs</p>
         <div class="mini-section-content">
           <div class="design card">
-            <img src="./assets/images/graphix/Home.png" alt="" />
+            <img
+              src="./assets/images/graphix/desktop/Home.png"
+              data-design="graphix"
+              alt=""
+            />
           </div>
           <div class="design card">
-            <img src="./assets/images/Desktop.png" alt="" />
+            <img
+              src="./assets/images/adia/desktop/home.png"
+              data-design=""
+              ="adia"
+              alt=""
+            />
           </div>
           <div class="design card">
-            <img src="./assets/images/Home Page.png" alt="" />
+            <img
+              src="./assets/images/blissCafe/desktop/home.png"
+              data-design="bliss-cafe"
+            />
           </div>
           <div class="design card">
-            <img src="./assets/images/volta.png" alt="" />
+            <img
+              src="./assets/images/volta/desktop/volta.png"
+              data-design="volta"
+              alt=""
+            />
           </div>
           <div class="design card">
-            <img src="./assets/images/portfolio.png" alt="" />
+            <img
+              src="./assets/images/portfolio/desktop/portfolio.png"
+              data-design="portfolio"
+              alt=""
+            />
           </div>
         </div>
       </div>
