fix: correct blog link reference and enhance image viewer with new Figma link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#designs">Designs</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a hzref="/blogs/index.html">Blog</a></li>
+          <li><a href="/blogs/index.html">Blog</a></li>
           <li><button>Contact Me</button></li>
         </ul>
       </nav>
@@ -209,17 +209,24 @@
 
     <!-- convinience elements -->
     <div id="image-viewer">
-      <i class="fa fa-times close" aria-hidden="true"></i>
+      <i class="fa fa-times close i" aria-hidden="true"></i>
       <i
         id="previous-image"
-        class="fa fa-arrow-circle-left"
+        class="fa fa-arrow-circle-left i"
         aria-hidden="true"
       ></i>
       <i
         id="next-image"
-        class="fa fa-arrow-circle-right"
+        class="fa fa-arrow-circle-right i"
         aria-hidden="true"
       ></i>
+      <a>
+        <div>
+          <i class="fab fa-figma"></i>
+        </div>
+        <div class="text">view in figma</div>
+      </a>
+
       <img class="modal-content" id="full-image" />
     </div>
     <script src="scripts/index.js"></script>
