feat: update contact method to email link and adjust styles for improved layout and accessibility

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           <li><a href="#designs">Designs</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="/blogs/index.html">Blog</a></li>
-          <li><button>Contact Me</button></li>
+          <li>
+            <a href="mailto:bxw254@gmail.com" target="_blank" class="contact"
+              >Contact Me</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
