feat: replace button with email link for contact and update styles for better alignment

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <h1>Hi 👋</h1>
         <p>I am a programmer / designer</p>
         <p>Bringing Ideas To Life</p>
-        <button>Lets Talk about Yours Today</button>
+        <a href="mailto:bxw254@gmail.com" target="_blank"
+          >Lets Talk about Yours Today</a
+        >
       </div>
       <div class="cool-image">
         <img src="assets/images/coding.gif" alt="Hero Image" />
