Got the navbar to be nice and lovely

--- a/index.html
+++ b/index.html
@@ -14,23 +14,44 @@
   <body>
     <header>
       <nav>
-        <div class="logo">Benexl</div>
-        <div class="hamburger-menu">
-          <i class="fas fa-bars"></i>
+        <div class="nav-large">
+          <div class="logo">Benexl</div>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#designs">Designs</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="/blogs/index.html">Blog</a></li>
+            <li>
+              <a href="mailto:bxw254@gmail.com" target="_blank" class="contact"
+                >Contact Me</a
+              >
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#designs">Designs</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="/blogs/index.html">Blog</a></li>
-          <li>
-            <a href="mailto:bxw254@gmail.com" target="_blank" class="contact"
-              >Contact Me</a
-            >
-          </li>
-        </ul>
+        <div class="nav-small">
+          <div>
+            <div class="logo">Benexl</div>
+            <div class="hamburger-menu">
+              <!-- <i class="fas fa-bars"></i> -->
+              s
+            </div>
+          </div>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#designs">Designs</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="/blogs/index.html">Blog</a></li>
+            <li>
+              <a href="mailto:bxw254@gmail.com" target="_blank" class="contact"
+                >Contact Me</a
+              >
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
     <div class="hero">
@@ -126,6 +147,7 @@
               data-design="graphix"
               alt=""
             />
+            <div>Click to Expand</div>
           </div>
           <div class="design card">
             <img
@@ -133,12 +155,14 @@
               data-design="adia"
               alt=""
             />
+            <div>Click to Expand</div>
           </div>
           <div class="design card">
             <img
               src="./assets/images/blissCafe/desktop/home.png"
               data-design="bliss-cafe"
             />
+            <div>Click to Expand</div>
           </div>
           <div class="design card">
             <img
@@ -146,6 +170,7 @@
               data-design="volta"
               alt=""
             />
+            <div>Click to Expand</div>
           </div>
           <div class="design card">
             <img
@@ -153,6 +178,7 @@
               data-design="portfolio"
               alt=""
             />
+            <div>Click to Expand</div>
           </div>
         </div>
       </div>
