feat: implement carousel for skills and designs sections, enhance layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           <div>
             <div class="logo">Benexl</div>
             <div class="hamburger-menu">
-              <!-- <i class="fas fa-bars"></i> -->
-              s
+              <i class="fas fa-bars"></i>
             </div>
           </div>
           <ul>
@@ -98,41 +97,43 @@
       </div>
       <div class="mini-section" id="skills">
         <p class="mini-section-header">Skills</p>
-        <div class="mini-section-content">
-          <div class="skill card">
-            <i class="fas fa-laptop-code"></i>
-            <p>Programming languages</p>
-            <p>python, c, c++, go, JavaScript, html/css</p>
-          </div>
-          <div class="skill card">
-            <i class="fab fa-figma"></i>
-            <p>Figma</p>
-            <p>UI/UX Design</p>
-          </div>
-          <div class="skill card">
-            <i class="fas fa-mobile-alt"></i>
-            <p>App Development</p>
-            <p>Flutter, React Native</p>
-          </div>
-          <div class="skill card">
-            <i class="fas fa-code"></i>
-            <p>Web Development</p>
-            <p>HTML, CSS, JavaScript, React</p>
-          </div>
-          <div class="skill card">
-            <i class="fas fa-server"></i>
-            <p>API Development</p>
-            <p>Node.js, Express, Django</p>
-          </div>
-          <div class="skill card">
-            <i class="fas fa-paint-brush"></i>
-            <p>Graphic Design</p>
-            <p>Photoshop, Illustrator</p>
-          </div>
-          <div class="skill card">
-            <i class="fas fa-pencil-alt"></i>
-            <p>Logo Design</p>
-            <p>Branding, Identity</p>
+        <div class="carousel-container">
+          <div class="mini-section-content carousel">
+            <div class="skill card">
+              <i class="fas fa-laptop-code"></i>
+              <p>Programming languages</p>
+              <p>python, c, c++, go, JavaScript, html/css</p>
+            </div>
+            <div class="skill card">
+              <i class="fab fa-figma"></i>
+              <p>Figma</p>
+              <p>UI/UX Design</p>
+            </div>
+            <div class="skill card">
+              <i class="fas fa-mobile-alt"></i>
+              <p>App Development</p>
+              <p>Flutter, React Native</p>
+            </div>
+            <div class="skill card">
+              <i class="fas fa-code"></i>
+              <p>Web Development</p>
+              <p>HTML, CSS, JavaScript, React</p>
+            </div>
+            <div class="skill card">
+              <i class="fas fa-server"></i>
+              <p>API Development</p>
+              <p>Node.js, Express, Django</p>
+            </div>
+            <div class="skill card">
+              <i class="fas fa-paint-brush"></i>
+              <p>Graphic Design</p>
+              <p>Photoshop, Illustrator</p>
+            </div>
+            <div class="skill card">
+              <i class="fas fa-pencil-alt"></i>
+              <p>Logo Design</p>
+              <p>Branding, Identity</p>
+            </div>
           </div>
         </div>
       </div>
@@ -140,71 +141,73 @@
     <section>
       <div class="mini-section" id="designs">
         <p class="mini-section-header">Designs</p>
-        <div class="mini-section-content">
-          <div class="design card">
-            <img
-              src="./assets/images/graphix/desktop/Home.png"
-              data-design="graphix"
-              alt=""
-            />
-            <div>Click to Expand</div>
-          </div>
-          <div class="design card">
-            <img
-              src="./assets/images/adia/desktop/home.png"
-              data-design="adia"
-              alt=""
-            />
-            <div>Click to Expand</div>
-          </div>
-          <div class="design card">
-            <img
-              src="./assets/images/blissCafe/desktop/home.png"
-              data-design="bliss-cafe"
-            />
-            <div>Click to Expand</div>
-          </div>
-          <div class="design card">
-            <img
-              src="./assets/images/volta/desktop/volta.png"
-              data-design="volta"
-              alt=""
-            />
-            <div>Click to Expand</div>
-          </div>
-          <div class="design card">
-            <img
-              src="./assets/images/portfolio/desktop/portfolio.png"
-              data-design="portfolio"
-              alt=""
-            />
-            <div>Click to Expand</div>
+        <div class="carousel-container-disable">
+          <div class="mini-section-content carousel-disable">
+            <div class="design card">
+              <img
+                src="./assets/images/graphix/desktop/Home.png"
+                data-design="graphix"
+                alt=""
+              />
+              <div>Click to Expand</div>
+            </div>
+            <div class="design card">
+              <img
+                src="./assets/images/adia/desktop/home.png"
+                data-design="adia"
+                alt=""
+              />
+              <div>Click to Expand</div>
+            </div>
+            <div class="design card">
+              <img
+                src="./assets/images/blissCafe/desktop/home.png"
+                data-design="bliss-cafe"
+              />
+              <div>Click to Expand</div>
+            </div>
+            <div class="design card">
+              <img
+                src="./assets/images/volta/desktop/volta.png"
+                data-design="volta"
+                alt=""
+              />
+              <div>Click to Expand</div>
+            </div>
+            <div class="design card">
+              <img
+                src="./assets/images/portfolio/desktop/portfolio.png"
+                data-design="portfolio"
+                alt=""
+              />
+              <div>Click to Expand</div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="mini-section" id="projects">
-        <p class="mini-section-header">Open Source Projects</p>
-        <div class="mini-section-content">
-          <div class="github-card">
-            <a href="https://github.com/benexl/yt-x"
-              ><img
-                src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/yt-x"
-                alt=""
-            /></a>
-          </div>
-          <div class="github-card">
-            <a href="https://github.com/benexl/lib-x"
-              ><img
-                src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/lib-x"
-                alt=""
-            /></a>
-          </div>
-          <div class="github-card">
-            <a href="https://github.com/benexl/fastanime"
-              ><img
-                src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/FastAnime"
-                alt=""
-            /></a>
+        <div class="mini-section" id="projects">
+          <p class="mini-section-header">Open Source Projects</p>
+          <div class="mini-section-content">
+            <div class="github-card">
+              <a href="https://github.com/benexl/yt-x"
+                ><img
+                  src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/yt-x"
+                  alt=""
+              /></a>
+            </div>
+            <div class="github-card">
+              <a href="https://github.com/benexl/lib-x"
+                ><img
+                  src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/lib-x"
+                  alt=""
+              /></a>
+            </div>
+            <div class="github-card">
+              <a href="https://github.com/benexl/fastanime"
+                ><img
+                  src="https://opengraph.githubassets.com/3f84a8dfd32e3fd874197891dbce5777325c25b901668ff5347bf2618a2bff1e/Benexl/FastAnime"
+                  alt=""
+              /></a>
+            </div>
           </div>
         </div>
       </div>
