feat: update personal introduction in the quote section and adjust font size for better readability

--- a/index.html
+++ b/index.html
@@ -90,8 +90,30 @@
             </div>
           </div>
           <div class="quote">
-            Whatever the mind can conceive and believe it can achieve <br />-
-            Napoleon
+            <p>
+              Hi, I'm <strong>Benedict Xavier</strong>, a passionate and driven
+              programmer with a strong foundation in
+              <strong>Python, AI, and machine learning</strong>. I enjoy solving
+              complex problems, from
+              <strong>optimization challenges</strong> like university
+              timetabling with OR-Tools to
+              <strong>building intelligent systems</strong> using LangChain and
+              Transformers.
+            </p>
+            <p>
+              Beyond coding, I have a deep appreciation for
+              <strong>philosophy, psychology, and personal growth</strong>. My
+              journey has shaped me into a critical thinker with a unique
+              perspective on life and technology. I'm always eager to learn,
+              push boundaries, and turn innovative ideas into reality.
+            </p>
+            <p>
+              When I'm not programming, you might find me exploring
+              <strong>music, art, or biohacking</strong>—always seeking ways to
+              maximize both mind and body. If you're interested in
+              <strong>collaborating on AI projects</strong> or just having a
+              thought-provoking conversation, feel free to connect!
+            </p>
           </div>
         </div>
       </div>
