feat: update footer links and adjust overflow behavior for improved navigation

--- a/index.html
+++ b/index.html
@@ -248,19 +248,23 @@
           ></a>
         </li>
         <li>
-          <a href="https://wa.me/0701468604" target="_blank"
+          <a href="https://wa.me/254701468604" target="_blank"
             ><i class="fa-brands fa-whatsapp"></i
           ></a>
         </li>
-        <li>
+        <!-- <li>
           <a href=""><i class="fa-brands fa-discord"></i></a>
-        </li>
+        </li> -->
         <li>
-          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/benedict-xavier-b5b8aa20b/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </li>
-        <li>
+        <!-- <li>
           <a href=""><i class="fa-brands fa-reddit"></i></a>
-        </li>
+        </li> -->
       </ul>
     </footer>
 
